<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/view_date"
        android:textColor="@color/text_color_time_listview"
        android:text="@string/string_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/view_checkin"
        android:text="@string/string_checkin"
        android:textColor="@color/text_color_checkinout_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/view_checkout"
        android:text="@string/string_checkout"
        android:textColor="@color/text_color_checkinout_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>