<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/topLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <vn.com.nms.ui.camera.CameraSourcePreview
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_gravity="top"
        android:background="@color/background_takepicture"
        android:layout_height="match_parent">
        <!--        android:layout_alignParentRight="true"-->
    <!--        android:layout_above="@+id/button_area"-->

        <vn.com.nms.ui.camera.GraphicOverlay
            android:id="@+id/faceOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </vn.com.nms.ui.camera.CameraSourcePreview>

    <LinearLayout
        android:id="@+id/button_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/background_takepicture"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">
        <!--        android:layout_alignParentBottom="true"-->

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:weightSum="3"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton1"
                android:checked="true"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_cham_cong" />
            <RadioButton
                android:layout_weight="1"
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_tra_cuu" />
            <RadioButton
                android:layout_weight="1"
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_them_anh" />
        </RadioGroup>


        <ImageButton
            android:id="@+id/button_camera"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:background="@null"
            android:src="@drawable/button_camera" />
    </LinearLayout>
</FrameLayout>
